<resources>
    <string name="app_name">InstaHelo</string>
    <string name="phone_no_ask">अपना फोन नंबर ब्ताएँ</string>
    <string name="phn_msg">आपके फ़ोन पर एक OTP भेजा जायेगा</string>
    <string name="string_next">ठीक है</string>
    <string name="user_selected_image">user_selected_image</string>
    <string name="verify_no_msg">हम आपके नंबर की जाँच कर रहे है</string>
    <string name="ok">ठीक है</string>
    <string name="edit">बदलना है</string>
    <string name="edit_no_msg">क्या आपका नंबर ठीक है  या आप कोई और नंबर डालेंगे?</string>
    <string name="otp_send_text">OTP भेज दिया गया</string>
    <string name="verify_your_phone_number">फोन नंबर verify करें</string>
    <string name="otp_verify_description">पे भेजी गयी 4 संख्या वाली OTP नीचे डालें</string>
    <string name="phone_no_sample">+98181881818</string>
    <string name="send_again">फिर से भेजें</string>
    <string name="what_s_your_name">अपना नाम बतायें</string>
    <string name="name_add_hint">जैसे: राम कुमार</string>
    <string name="empty_name_msg">नाम देना ज़रूरी है</string>
    <string name="empty_location_name_msg">यह बताना ज़रूरी है</string>
    <string name="next">आगे बढ़ें</string>
    <string name="user_location_ask_str">आप कहाँ से हैं?</string>
    <string name="location_hint_text">जैसे: गया, बिहार</string>
    <string name="user_preferences_title">अपनी पसंद बताएं</string>
    <string name="preference_text_1">नीचे अपनी पसंद के मुद्दों को चुने,</string>
    <string name="preference_text_2">ताकि हम आपको पसंद की चीजें दिखा सकें</string>
    <string name="option_1">ज्योतिष</string>
    <string name="option_2">राजनीति</string>
    <string name="option_3">क्रिकेट</string>
    <string name="option_4">भक्ति</string>
    <string name="option_5">सिनेमा</string>
    <string name="option_6">खेलकूद</string>
    <string name="option_7">रोमांस</string>
    <string name="getstarted">शुरू करें</string>
    <string name="comments_text">आजादी हम लेकर रहेंगे. हिंदुस्तान ज़िंदाबाद</string>
    <string name="upload_in_progress">अपलोड हो रहा है</string>
    <string name="sample_name_on_empty_profile">a</string>
    <string name="sample_user_name">Nagendra</string>
    <string name="adding_empty_comments_toast">पहले कुछ लिखें</string>
    <string name="post_message_hint">यहाँ कुछ लिखे</string>
    <string name="recommended_action_title">अभी के चर्चित मुद्दे</string>
    <string name="recommendation_itme_text">#आरक्षण</string>
    <string name="at_least_one_interest">एक रूचि बताना ज़रूरी है</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">intro message</string>


    <!-- fragment tags -->
    <string name="fragment_camera2">Camera2</string>
    <string name="fragment_view_stickers">View Stickers</string>


</resources>
