<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neartagtheme"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/neartagtextcolor"
        android:fontFamily="Helvetica-Bold"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_location_ask_str"/>
    <EditText
        android:id="@+id/edit_location_name"
        android:layout_marginTop="110dp"
        android:focusable="true"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_screen_no_ask"
        android:layout_gravity="center"
        android:textColorHint="@color/texthintcolor"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:hint="@string/location_hint_text" />
    <TextView
        android:id="@+id/send_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/getstartedoval"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:fontFamily="Helvetica-Bold"
        android:gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:textSize="24sp" />

    <ProgressBar
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/busy_send_location_name"/>
</RelativeLayout>