<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateVisible"
    android:focusableInTouchMode="true"
    android:background="@color/neartagtheme">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="31dp"
        android:textColor="@color/neartagtextcolor"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/verify_your_phone_number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/phone_no"
        android:layout_marginTop="79dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/neartagtextcolor"
        android:gravity="center_horizontal"
        android:text="@string/phone_no_sample"
        />
    <TextView
        android:layout_below="@+id/phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/toverify"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/neartagtextcolor"
        android:gravity="center_horizontal"
        android:text="@string/otp_verify_description"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:windowSoftInputMode="stateVisible"
        android:focusableInTouchMode="true"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/otp1"
            android:maxLength="1"
            android:focusable="true"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:width="35dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/neartagtextcolor"
            />
        <EditText
            android:id="@+id/otp2"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:focusable="true"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/neartagtextcolor"
            android:width="35dp"
            />
        <EditText
            android:id="@+id/otp3"
            android:maxLength="1"
            android:focusable="true"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:width="35dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/neartagtextcolor"
            />
        <EditText
            android:width="35dp"
            android:id="@+id/otp4"
            android:maxLength="1"
            android:focusable="true"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/neartagtextcolor"
            />
    </LinearLayout>
    <ProgressBar
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/busy_send_otp"/>
    <TextView
        android:id="@+id/re_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/busy_send_otp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@drawable/disabled_text"
        android:gravity="center"
        android:text="@string/send_again"/>
</RelativeLayout>